--- a/community/index.html
+++ b/community/index.html
@@ -152,7 +152,7 @@
  </li>
   
  <li title="GitHub">
-   <a target="_blank" href="https://github.com/agriros/agriros.github.io"><i class="fab fa-github"></i> GitHub:</a> Development takes place here!
+   <a target="_blank" href="https://github.com/ros-agriculture"><i class="fab fa-github"></i> GitHub:</a> Development takes place here!
  </li>
   
 </ul>
@@ -218,7 +218,7 @@
   </li>
   
   <li class="list-inline-item mx-2 h3" data-toggle="tooltip" data-placement="top" title="GitHub">
-    <a class="text-white" target="_blank" href="https://github.com/agriros/agriros.github.io">
+    <a class="text-white" target="_blank" href="https://github.com/ros-agriculture">
       <i class="fab fa-github"></i>
     </a>
   </li>
