--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
   </li>
   
   <li class="list-inline-item mx-2 h3" data-toggle="tooltip" data-placement="top" title="GitHub">
-    <a class="text-white" target="_blank" href="https://github.com/agriros/agriros.github.io">
+    <a class="text-white" target="_blank" href="https://github.com/ros-agriculture">
       <i class="fab fa-github"></i>
     </a>
   </li>
