--- a/community/index.html
+++ b/community/index.html
@@ -247,7 +247,7 @@
 
 
 
-<script src="/js/main.min.7237633796b2069cf2de3a9ab1459986ddf318b55a55af93666c0a777a96aa21.js" integrity="sha256-cjdjN5ayBpzy3jqasUWZht3zGLVaVa&#43;TZmwKd3qWqiE="></script>
+<script src="/js/main.min.4d39a0ec69dd396a2c0b3d071826ba5cac7f8c7314b9a98b7275ae0db09af1bb.js" integrity="sha256-TTmg7GndOWosCz0HGCa6XKx/jHMUuamLcnWuDbCa8bs="></script>
 
 
   </body>
